--- a/.env.example
+++ b/.env.example
@@ -8,14 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=oracle
-DB_HOST=localhost
-DB_PORT=1521
-DB_SERVICE_NAME=orclpdb
-DB_DATABASE=
-DB_USERNAME=UTMDTE
-DB_PASSWORD=UTMDTE
-DB_SERVER_VERSION=19c
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=UTMDTE
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
