--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "laravel/passport": "^10.3",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "owen-it/laravel-auditing": "^13.0",
-        "yajra/laravel-oci8": "9"
+        "owen-it/laravel-auditing": "^13.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
